Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
qpid-cpp-0.34
-
None
Description
There are a few integer literals that cause selector parsing to fail or the resulting evaluation to be incorrect:
(a) hexadecimal literals don't seem to be recognised, e.g. 0xFF will result in a parse error
(b) octal literals are evaluated as decimal e.g 077 is interpreted as decimal 77 rather than decimal 63
(c) large numbers fail with a lexical cast error, e.g -9223372036854775808L or 9223372036854775807L
Attachments
Issue Links
- causes
-
QPID-7709 [qpid-cpp] Problem building on Fedora rawhide (-Werror=maybe-uninitialized in SelectorExpression.cpp)
- Resolved