QPID-6718: Complete parsing for all styles of numeric literals

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1700915 13f79535-47bb-0310-9956-ffa450edef68